--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="home-1.html" class="mil-logo">IEDC</a>
+                <a href="index.html" class="mil-logo">IEDC</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -80,13 +80,13 @@
 
                             <nav class="mil-main-menu" id="swupMenu">
                                 <ul>
-                                    <li class="mil-has-children mil-active">
-                                        <a href="home-1.html">Xelerate</a>
+                                    <li class="mil-has-children">
+                                        <a href="index.html">Xelerate</a>
                                     </li>
                                     <li class="mil-has-children">
                                         <a href="services.html">Roadmap</a>
                                     </li>
-                                    <li class="mil-has-children">
+                                    <li class="mil-has-children mil-active">
                                         <a href="contact.html">Contact Us</a>
                                     </li>
                                 </ul>
@@ -165,7 +165,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="home-1.html" class="mil-logo">IEDC</a>
+                <a href="index.html" class="mil-logo">IEDC</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -190,7 +190,7 @@
                     <div class="mil-banner-content mil-center mil-up">
                         <div class="container">
                             <ul class="mil-breadcrumbs mil-center mil-mb-60">
-                                <li><a href="home-1.html">Homepage</a></li>
+                                <li><a href="index.html">Homepage</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
                             <h1 class="mil-mb-60">Get in touch!</h1>
@@ -299,13 +299,13 @@
 
                                             <nav class="mil-footer-menu mil-mb-60">
                                                 <ul>
-                                                    <li class="mil-up mil-active">
-                                                        <a href="home-1.html">Home</a>
+                                                    <li class="mil-up ">
+                                                        <a href="index.html">Home</a>
                                                     </li>
                                                     <li class="mil-up">
                                                         <a href="services.html">Roadmap</a>
                                                     </li>
-                                                    <li class="mil-up">
+                                                    <li class="mil-up mil-active">
                                                         <a href="contact.html">Contact</a>
                                                     </li>
                                                     <!-- <li class="mil-up">
