--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="home-1.html" class="mil-logo">XELERATE</a>
+                <a href="index.html" class="mil-logo">XELERATE</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -81,7 +81,7 @@
                             <nav class="mil-main-menu" id="swupMenu">
                                 <ul>
                                     <li class="mil-has-children mil-active">
-                                        <a href="home-1.html">Xelerate</a>
+                                        <a href="index.html">Xelerate</a>
                                     </li>
                                     <li class="mil-has-children">
                                         <a href="services.html">Roadmap</a>
@@ -165,7 +165,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="home-1.html" class="mil-logo">IEDC</a>
+                <a href="index.html" class="mil-logo">IEDC</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -691,7 +691,7 @@
                                             <nav class="mil-footer-menu mil-mb-60">
                                                 <ul>
                                                     <li class="mil-up mil-active">
-                                                        <a href="home-1.html">Home</a>
+                                                        <a href="index.html">Home</a>
                                                     </li>
                                                     <li class="mil-up">
                                                         <a href="services.html">Roadmap</a>
