--- a/services.html
+++ b/services.html
@@ -67,7 +67,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="home-1.html" class="mil-logo">Xelerate</a>
+                <a href="index.html" class="mil-logo">Xelerate</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -81,7 +81,7 @@
                             <nav class="mil-main-menu" id="swupMenu">
                                 <ul>
                                     <li class="mil-has-children">
-                                        <a href="home-1.html">Xelerate</a>
+                                        <a href="index.html">Xelerate</a>
                                     </li>
                                     <li class="mil-has-children mil-active">
                                         <a href="services.html">Roadmap</a>
@@ -165,7 +165,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="home-1.html" class="mil-logo">IEDC</a>
+                <a href="index.html" class="mil-logo">IEDC</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -195,7 +195,7 @@
                                 </div>
                                 <div class="container">
                                     <ul class="mil-breadcrumbs mil-light mil-mb-60">
-                                        <li><a href="home-1.html">Homepage</a></li>
+                                        <li><a href="index.html">Homepage</a></li>
                                         <li><a href="services.html">Roadmap</a></li>
                                     </ul>
                                     <h1 class="mil-muted mil-mb-60">Complete <span class="mil-thin">guideance</span><br> and <span class="mil-thin">roadmap</span></h1>
@@ -371,10 +371,10 @@
 
                                             <nav class="mil-footer-menu mil-mb-60">
                                                 <ul>
-                                                    <li class="mil-up mil-active">
-                                                        <a href="home-1.html">Home</a>
-                                                    </li>
                                                     <li class="mil-up">
+                                                        <a href="index.html">Home</a>
+                                                    </li>
+                                                    <li class="mil-up mil-active">
                                                         <a href="services.html">Roadmap</a>
                                                     </li>
                                                     <li class="mil-up">
